[ksp] Silence warnings about using Usafe APIs from KSP: AMPER-5300
KSP uses restricted APIs internally, so the JVM that runs the compiler throws such warnings as:
> A restricted method in java.lang.System has been called
> A terminally deprecated method in sun.misc.Unsafe has been called

The issue should be fixed in KSP itself: https://github.com/google/ksp/issues/2753
However, until that happens, we silence the warning to avoid showing it to the user.